# massify

./: .gitignore  package-lock.json  package.json
api/: .gitignore  README.md  pyproject.toml
api/app/: config.py  database.py  main.py  models.py
api/app/routes/: beers.py  ratings.py  tastings.py  users.py
app/: db.ts  layout.tsx
components/: Navbar.tsx
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/new/: page.tsx
frontend/app/users/: page.tsx
frontend/components/: TodoItem.tsx
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20230904185634_add_user_model/: migration.sql
frontend/public/: icon_favicon.psd  index.html
frontend/src/: App.tsx  api.ts
frontend/src/components/: BeerForm.tsx  BeerTable.tsx  MainNav.tsx  TastingForm.tsx  TastingTable.tsx  UserForm.tsx  UserTable.tsx
frontend/src/pages/: Beers.tsx  HomePage.tsx  Tastings.tsx  Users.tsx
